--- a/src/components/know/know.scss
+++ b/src/components/know/know.scss
@@ -1,6 +1,7 @@
 .bottom{
     padding: 2% 0;
     justify-content: center;
+    width: 100%;
     .left{
         width: 30%;
         height: 200px;
@@ -24,11 +25,34 @@
     }
 }
 
+
 .know{
     background: linear-gradient(117.83deg, rgba(112, 111, 111, 0.7) -0.77%, rgba(36, 36, 36, 0.7) 106.52%), url('../../pics/rccg-logo.png') fixed;
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    height: 100vh;
+    width: 100vw;
     padding: 10% 0;
+}
+@media only screen and ( max-width: 600px ){
+    .knowdf{
+
+        .bottom{
+            flex-direction: column;
+            justify-content: center;
+            .left, .right{
+                width: 100%;
+                height: 150px;
+                img{
+                    margin: auto;
+                }
+            }
+        }
+        #hard{
+            font-size: 2em;
+        }
+        h1{
+            font-size: 2.5rem;
+        }
+    }
 }
