--- a/src/components/sow/sow.scss
+++ b/src/components/sow/sow.scss
@@ -20,3 +20,21 @@
     background-size: cover;
     height: 50vh;
 }
+
+@media only screen and ( max-width: 600px ){
+    .sowslide{
+        width: 100vw;
+        margin: 5% 1%;
+    }
+}
+@media only screen and ( max-width: 1000px ){
+    .sowslide{
+        width: 80vw;
+        margin: 5% 1%;
+    }
+}
+@media only screen and ( max-width: 450px ){
+    #give{
+        width: 100%;
+    }
+}
