mobile view done

--- a/src/components/expsingle/expsingle.scss
+++ b/src/components/expsingle/expsingle.scss
@@ -26,3 +26,11 @@
         }
     }
 }
+
+@media only screen and ( max-width: 950px ){
+    .expsingle{
+        .top{
+            height: 150px;
+        }
+    }
+}
