--- a/src/components/latest/latest.scss
+++ b/src/components/latest/latest.scss
@@ -4,3 +4,10 @@
         padding: 0 2%;
     }
 }
+@media only screen and ( max-width: 950px ){
+    .evet{
+        .df{
+            flex-wrap: wrap;
+        }
+    }
+}
