--- a/src/components/devotion/devotion.scss
+++ b/src/components/devotion/devotion.scss
@@ -21,7 +21,13 @@
 }
 
 @media only screen and ( max-width: 600px ){
-    .memorise{
+    .devotion .memorise{
         flex-direction: column;
+        h2{
+            width: 100%;
+        }
+        p{
+            width: 100%;
+        }
     }
 }
